added a giter8 template