@@ -1,3 +1,4 @@
+
 sbtPlugin := true
 organization := "org.typelevel"
 name := "sbt-catalysts"
@@ -29,3 +30,7 @@ scmInfo := Some(ScmInfo(url("https://github.com/inthenow/sbt-catalysts"), "git@g
 publishMavenStyle := false
 bintrayRepository := "sbt-plugins"
 bintrayOrganization := Some("typelevel")
+
+scriptedLaunchOpts ++= List("-Xms1024m", "-Xmx1024m", "-XX:ReservedCodeCacheSize=128m", "-XX:MaxPermSize=256m", "-Xss2m", "-Dfile.encoding=UTF-8")
+
+resolvers += Resolver.url("typesafe", url("http://repo.typesafe.com/typesafe/ivy-releases/"))(Resolver.ivyStylePatterns)
